Fixed Game Record tests