@@ -7,6 +7,7 @@ import com.asd.board_game_statistics_api.test_utils.TestsWithMockedDatabase;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -26,7 +27,7 @@ public class GameRecordServiceTests extends TestsWithMockedDatabase {
                 "2024-01-15", // datePlayed
                 List.of(1, 2, 5), // playerIds
                 List.of(150, 120, 180), // points
-                List.of("Solo", "Solo", "Solo"), // playerTeams
+                Arrays.asList((Integer) null, (Integer) null, (Integer) null), // playerTeams (null for solo)
                 List.of(true, false, false) // hasWon
         );
 
@@ -43,19 +44,19 @@ public class GameRecordServiceTests extends TestsWithMockedDatabase {
     @Test
     void createTeamMatch() {
         GameRecordRequest bad = new GameRecordRequest(
-                1, 100, "2024-01-15", List.of(1, 2), List.of(150, 120), List.of("Blue Team", "Red Team"), List.of(true, false)
+                1, 100, "2024-01-15", List.of(1, 2), List.of(150, 120), List.of(1, 2), List.of(true, false)
         );
-        // This should work now since we don't have team validation in the new structure
+
         GameRecordResponse created = gameRecordService.recordGame(dummyAccount, bad);
         assertThat(created.playedGameId()).isPositive();
-        assertThat(created.playerTeams()).containsExactly("Blue Team", "Red Team");
+        assertThat(created.playerTeams()).containsExactly(1, 2);
     }
 
     @Test
     void DeleteRecord() {
         // create
         GameRecordRequest req = new GameRecordRequest(
-                1, 777, "2024-01-15", List.of(1, 2), List.of(150, 120), List.of("Solo", "Solo"), List.of(true, false)
+                1, 777, "2024-01-15", List.of(1, 2), List.of(150, 120), Arrays.asList((Integer) null, (Integer) null), List.of(true, false)
         );
         GameRecordResponse created = gameRecordService.recordGame(dummyAccount, req);
 
